--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Catálogo de Zonas Arqueológicas</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,15 +10,17 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
 <body>
   <header>
     <!-- place navbar here -->
+    <h1>Bienvenido(a) al catálogo de Zonas Arqueológicas</h1>
   </header>
   <main>
-
+    ¿estás listo para vivir esta experiencia a través del uso de la Realidad Aumentada?
   </main>
   <footer>
     <!-- place footer here -->
