--- a/index.html
+++ b/index.html
@@ -16,11 +16,63 @@
 
 <body>
   <header>
-    <!-- place navbar here -->
-    <h1>Bienvenido(a) al catálogo de Zonas Arqueológicas</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">PeninsulAR</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
   </header>
   <main>
-    ¿estás listo para vivir esta experiencia a través del uso de la Realidad Aumentada?
+    <div class="container text-center">
+      <div class="row row-cols-1 gx-5">
+        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
+          <a href="camp-za.html"><img src="/imgs-zonas/cam-estado.jpg" alt="" width="80%"></a>
+          <p>Campeche</p>
+        </div>
+        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
+          <a href="qr-za.html"><img src="/imgs-zonas/qr-estado.jpg" alt="" width="80%"></a>
+          <p>Quintana Roo</p>
+        </div>
+        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
+          <a href="yuc-za.html"><img src="/imgs-zonas/yuc-estado.jpg" alt="" width="80%"></a>
+          <p>Yucatán</p>
+        </div>
+      </div>
+
+
+
+    </div>
   </main>
   <footer>
     <!-- place footer here -->
