--- a/index.html
+++ b/index.html
@@ -55,23 +55,20 @@
   </header>
   <main>
     <div class="container text-center">
-      <div class="row row-cols-1 gx-5">
-        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
-          <a href="camp-za.html"><img src="/imgs-zonas/cam-estado.jpg" alt="" width="80%"></a>
+      <div class="row g-5 row-cols-1">
+        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
+          <a href="camp-za.html"><img src="/imgs-zonas/cam-estado.jpg" alt="" width="90%"></a>
           <p>Campeche</p>
         </div>
-        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
-          <a href="qr-za.html"><img src="/imgs-zonas/qr-estado.jpg" alt="" width="80%"></a>
+        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
+          <a href="qr-za.html"><img src="/imgs-zonas/qr-estado.jpg" alt="" width="90%"></a>
           <p>Quintana Roo</p>
         </div>
-        <div class="col col-sm-12 col-md-6 col-lg-3 img-fluid rounded float-start img-thumbnail p-3">
-          <a href="yuc-za.html"><img src="/imgs-zonas/yuc-estado.jpg" alt="" width="80%"></a>
+        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
+          <a href="yuc-za.html"><img src="/imgs-zonas/yuc-estado.jpg" alt="" width="90%"></a>
           <p>Yucatán</p>
         </div>
       </div>
-
-
-
     </div>
   </main>
   <footer>
