--- a/yuc-za.html
+++ b/yuc-za.html
@@ -54,6 +54,7 @@
       </nav>
   </header>
   <main>
+    <div class="container mb-2">
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card">
@@ -109,6 +110,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     </div>
   </main>
