modified:   camp-za.html 	modified:   css/camp-za.css 	modified:   css/qr-za.css 	modified:   css/styles.css 	modified:   css/yuc-za.css 	modified:   index.html 	modified:   qr-za.html 	modified:   yuc-za.html

--- a/camp-za.html
+++ b/camp-za.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>PeninsulAR</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,44 +19,29 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">PeninsulAR</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">PeninsulAR</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Estados
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="camp-za.html">Campeche</a></li>
+                <li><a class="dropdown-item" href="qr-za.html">Quintana Roo</a></li>
+                <li><a class="dropdown-item" href="yuc-za.html">Yucatán</a></li>
+              </ul>
+            </li>
   </header>
-  <main>
+  <main class="my-5">
     <div class="container mb-2">
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
@@ -64,7 +49,8 @@
             <img src="/imgs-zonas/cam-calakmul-za.jfif" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Calakmul</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Calakmul es uno de los sitios arqueológicos más importantes del mundo maya. Fue una ciudad-estado poderosa durante el período Clásico Maya. Se caracteriza por su impresionante sistema de pirámides y estructuras ceremoniales.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -73,7 +59,8 @@
             <img src="/imgs-zonas/cam-edzna-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Edzna</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Edzná fue una antigua ciudad maya que prosperó durante el período Clásico Tardío. Es conocida por su impresionante sistema de canales y embalses, que ayudaban a controlar el agua en la zona.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -82,7 +69,8 @@
             <img src="/imgs-zonas/cam-hormiguero-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Hormiguero</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Hormiguero es un sitio arqueológico que data del período Clásico Maya. Su nombre se debe a la abundancia de hormigas en la zona. Destacan las estructuras monumentales y una pirámide central.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -91,7 +79,8 @@
             <img src="/imgs-zonas/cam-kanki-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Kankí</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Kankí es un sitio arqueológico que pertenece al período Clásico Tardío de la civilización maya. Aunque es un sitio relativamente pequeño, contiene una serie de estructuras y plazas que muestran la habilidad arquitectónica de los antiguos mayas.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -100,7 +89,9 @@
             <img src="/imgs-zonas/cam-xpuhil-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Xpuhil</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Xpuhil es otro importante sitio arqueológico de la cultura maya. Contiene diversas estructuras, incluyendo una pirámide y una serie de edificios bien preservados. Xpuhil es conocida por su arquitectura distintiva y detalles decorativos en las fachadas de los edificios.
+              </p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
