--- a/qr-za.html
+++ b/qr-za.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>PeninsulAR</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,52 +16,38 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">PeninsulAR</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">PeninsulAR</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Estados
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="camp-za.html">Campeche</a></li>
+                <li><a class="dropdown-item" href="qr-za.html">Quintana Roo</a></li>
+                <li><a class="dropdown-item" href="yuc-za.html">Yucatán</a></li>
+              </ul>
+            </li>
   </header>
-  <main>
+  <main class="my-5">
     <div class="container mb-2">
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
             <img src="/imgs-zonas/qr-coba-za.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Cobá</h5>
+              <p class="card-text">Cobá fue una antigua ciudad maya que floreció durante el período Clásico. Es conocida por su red de sacbés (antiguos caminos) que conectan las diversas estructuras de la ciudad.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -69,8 +55,9 @@
           <div class="card">
             <img src="/imgs-zonas/qr-elmeco-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">El Meco</h5>
+              <p class="card-text">El Meco es un sitio arqueológico de tamaño moderado con una gran pirámide central y otras estructuras. Es conocido por su ubicación junto al mar y las vistas panorámicas que ofrece desde su pirámide.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -78,8 +65,9 @@
           <div class="card">
             <img src="/imgs-zonas/qr-sanmiguelito-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">San Miguelito</h5>
+              <p class="card-text">San Miguelito es un pequeño sitio arqueológico maya ubicado en el corazón de la zona hotelera de Cancún. Contiene una serie de estructuras y patios. Aunque es más pequeño que otros sitios, ofrece una visión de la cultura maya en un contexto urbano.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -87,8 +75,9 @@
           <div class="card">
             <img src="/imgs-zonas/qr-tulum-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Tulum</h5>
+              <p class="card-text">Tulum es una antigua ciudad amurallada de la civilización maya que floreció durante el período Posclásico. Su nombre significa "muralla" o "ciudad amurallada" en maya. Es conocida por su impresionante ubicación junto al mar, lo que la convierte en una de las zonas arqueológicas más fotografiadas del mundo.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
@@ -96,8 +85,9 @@
           <div class="card">
             <img src="/imgs-zonas/qr-xcaret-za.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Xcaret</h5>
+              <p class="card-text">Aunque Xcaret no es una zona arqueológica tradicional, es un parque eco-arqueológico que preserva la historia y cultura maya. Ofrece una combinación de áreas naturales y atracciones culturales.</p>
+              <a href="#" class="btn btn-primary">Saber más...</a>
             </div>
           </div>
         </div>
