--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">PeninsulAR</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,51 +25,36 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
   </header>
-  <main>
-    <div class="container text-center">
-      <div class="row g-5 row-cols-1">
-        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
-          <a href="camp-za.html"><img src="/imgs-zonas/cam-estado.jpg" alt="" width="90%"></a>
-          <p>Campeche</p>
+  <main class="my-5">
+    <div class="container container text-center">
+      <div class="row g-9 justify-content-center">
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="p-3 border">
+            <a href="camp-za.html"><img src="/imgs-zonas/cam-estado.jpg" alt="" class="img-fluid"></a>
+            <p class="mt-3">Campeche</p>
+          </div>
         </div>
-        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
-          <a href="qr-za.html"><img src="/imgs-zonas/qr-estado.jpg" alt="" width="90%"></a>
-          <p>Quintana Roo</p>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="p-3 border">
+            <a href="qr-za.html"><img src="/imgs-zonas/qr-estado.jpg" alt="" class="img-fluid"></a>
+            <p class="mt-3">Quintana Roo</p>
+          </div>
         </div>
-        <div class="col p-3 col-sm-12 col-md-6 col-lg-3 img-fluid img-thumbnail">
-          <a href="yuc-za.html"><img src="/imgs-zonas/yuc-estado.jpg" alt="" width="90%"></a>
-          <p>Yucatán</p>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="p-3 border">
+            <a href="yuc-za.html"><img src="/imgs-zonas/yuc-estado.jpg" alt="" class="img-fluid"></a>
+            <p class="mt-3">Yucatán</p>
+          </div>
         </div>
       </div>
     </div>
+    
   </main>
   <footer>
     <!-- place footer here -->
