modified:   camp-za.html 	modified:   css/camp-za.css 	modified:   css/qr-za.css 	modified:   css/yuc-za.css 	modified:   qr-za.html 	modified:   yuc-za.html

--- a/camp-za.html
+++ b/camp-za.html
@@ -21,17 +21,17 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">PeninsulAR</a>
+        <a class="navbar-brand text-white href="index.html">PeninsulAR</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active text-white aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Estados
               </a>
               <ul class="dropdown-menu">
@@ -43,55 +43,75 @@
   </header>
   <main class="my-5">
     <div class="container mb-2">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
+      <div class="row row-cols-1 row-cols-md-5 g-4">
+        <div class="col-md-4">
           <div class="card">
-            <img src="/imgs-zonas/cam-calakmul-za.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Calakmul</h5>
-              <p class="card-text">Calakmul es uno de los sitios arqueológicos más importantes del mundo maya. Fue una ciudad-estado poderosa durante el período Clásico Maya. Se caracteriza por su impresionante sistema de pirámides y estructuras ceremoniales.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/cam-calakmul-za.jfif" class="card-img-top img-fluid h-100" alt="...">
+             <div class="card-front">
+               <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Calakmul</h5>
+              <p class="card-text text-white">Calakmul es uno de los sitios arqueológicos más importantes del mundo maya. Fue una ciudad-estado poderosa durante el período Clásico Maya. Se caracteriza por su impresionante sistema de pirámides y estructuras ceremoniales.</p>
+               </div>
+           </div>
+           <div class="card-back">
+            <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
+           </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="/imgs-zonas/cam-edzna-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-front">
+              <div class="card-body bg-custom">
+                <h5 class="card-title text-white">Edzna</h5>
+                <p class="card-text text-white">Edzná fue una antigua ciudad maya que prosperó durante el período Clásico Tardío. Es conocida por su impresionante sistema de canales y embalses, que ayudaban a controlar el agua en la zona.</p>
+            </div>
+            </div>
+            <div class="card-back">
+              <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
             </div>
           </div>
         </div>
-        <div class="col">
+        
+        <div class="col-md-4">
           <div class="card">
-            <img src="/imgs-zonas/cam-edzna-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Edzna</h5>
-              <p class="card-text">Edzná fue una antigua ciudad maya que prosperó durante el período Clásico Tardío. Es conocida por su impresionante sistema de canales y embalses, que ayudaban a controlar el agua en la zona.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <div class="card-front">
+              <img src="/imgs-zonas/cam-hormiguero-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Hormiguero</h5>
+              <p class="card-text text-white">Hormiguero es un sitio arqueológico que data del período Clásico Maya. Su nombre se debe a la abundancia de hormigas en la zona. Destacan las estructuras monumentales y una pirámide central.</p>
+            </div>
+            </div>
+            <div class="card-back">
+              <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-4">
           <div class="card">
-            <img src="/imgs-zonas/cam-hormiguero-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Hormiguero</h5>
-              <p class="card-text">Hormiguero es un sitio arqueológico que data del período Clásico Maya. Su nombre se debe a la abundancia de hormigas en la zona. Destacan las estructuras monumentales y una pirámide central.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <div class="card-front">
+              <img src="/imgs-zonas/cam-kanki-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Kankí</h5>
+              <p class="card-text text-white">Kankí es un sitio arqueológico que pertenece al período Clásico Tardío de la civilización maya. Aunque es un sitio relativamente pequeño, contiene una serie de estructuras y plazas que muestran la habilidad arquitectónica de los antiguos mayas.</p>
+            </div>
+            </div>
+            <div class="card-back">
+              <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-4">
           <div class="card">
-            <img src="/imgs-zonas/cam-kanki-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Kankí</h5>
-              <p class="card-text">Kankí es un sitio arqueológico que pertenece al período Clásico Tardío de la civilización maya. Aunque es un sitio relativamente pequeño, contiene una serie de estructuras y plazas que muestran la habilidad arquitectónica de los antiguos mayas.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/cam-xpuhil-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-front">
+              <div class="card-body bg-custom">
+                <h5 class="card-title text-white">Xpuhil</h5>
+                <p class="card-text text-white">Xpuhil es otro importante sitio arqueológico de la cultura maya. Contiene diversas estructuras, incluyendo una pirámide y una serie de edificios bien preservados. Xpuhil es conocida por su arquitectura distintiva y detalles decorativos en las fachadas de los edificios.</p>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="/imgs-zonas/cam-xpuhil-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Xpuhil</h5>
-              <p class="card-text">Xpuhil es otro importante sitio arqueológico de la cultura maya. Contiene diversas estructuras, incluyendo una pirámide y una serie de edificios bien preservados. Xpuhil es conocida por su arquitectura distintiva y detalles decorativos en las fachadas de los edificios.
-              </p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <div class="card-back">
+              <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
             </div>
           </div>
         </div>
