--- a/qr-za.html
+++ b/qr-za.html
@@ -18,17 +18,17 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">PeninsulAR</a>
+        <a class="navbar-brand text-white" href="index.html">PeninsulAR</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Estados
               </a>
               <ul class="dropdown-menu">
@@ -43,51 +43,46 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="/imgs-zonas/qr-coba-za.jfif" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Cobá</h5>
-              <p class="card-text">Cobá fue una antigua ciudad maya que floreció durante el período Clásico. Es conocida por su red de sacbés (antiguos caminos) que conectan las diversas estructuras de la ciudad.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/qr-coba-za.jfif" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Cobá</h5>
+              <p class="card-text text-white">Cobá fue una antigua ciudad maya que floreció durante el período Clásico. Es conocida por su red de sacbés (antiguos caminos) que conectan las diversas estructuras de la ciudad.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/imgs-zonas/qr-elmeco-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Meco</h5>
-              <p class="card-text">El Meco es un sitio arqueológico de tamaño moderado con una gran pirámide central y otras estructuras. Es conocido por su ubicación junto al mar y las vistas panorámicas que ofrece desde su pirámide.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/qr-elmeco-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">El Meco</h5>
+              <p class="card-text text-white">El Meco es un sitio arqueológico de tamaño moderado con una gran pirámide central y otras estructuras. Es conocido por su ubicación junto al mar y las vistas panorámicas que ofrece desde su pirámide.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/imgs-zonas/qr-sanmiguelito-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">San Miguelito</h5>
-              <p class="card-text">San Miguelito es un pequeño sitio arqueológico maya ubicado en el corazón de la zona hotelera de Cancún. Contiene una serie de estructuras y patios. Aunque es más pequeño que otros sitios, ofrece una visión de la cultura maya en un contexto urbano.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/qr-sanmiguelito-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">San Miguelito</h5>
+              <p class="card-text text-white">San Miguelito es un pequeño sitio arqueológico maya ubicado en el corazón de la zona hotelera de Cancún. Contiene una serie de estructuras y patios. Aunque es más pequeño que otros sitios, ofrece una visión de la cultura maya en un contexto urbano.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/imgs-zonas/qr-tulum-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Tulum</h5>
-              <p class="card-text">Tulum es una antigua ciudad amurallada de la civilización maya que floreció durante el período Posclásico. Su nombre significa "muralla" o "ciudad amurallada" en maya. Es conocida por su impresionante ubicación junto al mar, lo que la convierte en una de las zonas arqueológicas más fotografiadas del mundo.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/qr-tulum-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Tulum</h5>
+              <p class="card-text text-white">Tulum es una antigua ciudad amurallada de la civilización maya que floreció durante el período Posclásico. Su nombre significa "muralla" o "ciudad amurallada" en maya. Es conocida por su impresionante ubicación junto al mar, lo que la convierte en una de las zonas arqueológicas más fotografiadas del mundo.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/imgs-zonas/qr-xcaret-za.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Xcaret</h5>
-              <p class="card-text">Aunque Xcaret no es una zona arqueológica tradicional, es un parque eco-arqueológico que preserva la historia y cultura maya. Ofrece una combinación de áreas naturales y atracciones culturales.</p>
-              <a href="#" class="btn btn-primary">Saber más...</a>
+            <img src="/imgs-zonas/qr-xcaret-za.jpg" class="card-img-top img-fluid h-100" alt="...">
+            <div class="card-body bg-custom">
+              <h5 class="card-title text-white">Xcaret</h5>
+              <p class="card-text text-white">Aunque Xcaret no es una zona arqueológica tradicional, es un parque eco-arqueológico que preserva la historia y cultura maya. Ofrece una combinación de áreas naturales y atracciones culturales.</p>
             </div>
           </div>
         </div>
