--- a/camp-za.html
+++ b/camp-za.html
@@ -11,8 +11,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/camp-za.css">
+    <script src="/assets/index.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
 
 
 </head>
@@ -21,14 +25,14 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-custom">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="index.html"">PeninsulAR</a>
+        <a class="navbar-brand text-white" href="index.html">PeninsulAR</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active text-white" aria-current=page href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -45,21 +49,23 @@
     <div class="container mb-2">
       <div class="row row-cols-1 row-cols-md-5 g-4">
         <div class="col-md-4">
-          <div class="card">
+          <div id="tarjetaPlantilla" class="card rotate">
             <img src="/imgs-zonas/cam-calakmul-za.jfif" class="card-img-top img-fluid h-100" alt="...">
              <div class="card-front">
                <div class="card-body bg-custom">
               <h5 class="card-title text-white">Calakmul</h5>
               <p class="card-text text-white">Calakmul es uno de los sitios arqueológicos más importantes del mundo maya. Fue una ciudad-estado poderosa durante el período Clásico Maya. Se caracteriza por su impresionante sistema de pirámides y estructuras ceremoniales.</p>
+              <button id="girarBoton">Ver en AR</button>
                </div>
            </div>
            <div class="card-back">
-            <img src="/imgs-zonas/cam-edzna-za.jpg" alt="" class="img-fluid h-100 back-image">
+            <img src="/assets/marcador-ar.png" alt="" class="img-fluid h-100 back-image">
+            <video id="cam"></video>
            </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card" id="tarjetaPlantilla">
             <img src="/imgs-zonas/cam-edzna-za.jpg" class="card-img-top img-fluid h-100" alt="...">
             <div class="card-front">
               <div class="card-body bg-custom">
